# chess-ai

./: .gitignore  CLAUDE.MD  Makefile  README.md  chess.py  chess_ai.py  chess_endpoint.py  custom_class.py  hybrid_chess_ai.py  nnue_dataset.py  nnue_model.py  opening_book.txt  pure_cpp_chess_ai.py  pyproject.toml  test_pgn_reader.py  train.py
.github/workflows/: tests.yml
cpp_search/: fast_chess_engine.cpp  hybrid_chess_engine.cpp  pure_cpp_chess_engine.cpp  search_engine.cpp  setup.py  setup_hybrid.py  setup_new.py  setup_pure.py
training/: convert_to_onnx.py  create_chunked_dataset.py  create_dataset.py  halfkp_model.py  nnue_dataset.py  prepare_and_train.py  train.py  train_cuda.py
