[project]
name = "chess-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cairosvg>=2.8.2",
    "chess>=1.11.2",
    "numpy>=2.2.6",
    "pillow>=11.3.0",
    "pygame>=2.6.1",
    "pytest>=8.4.1",
    "torch>=2.8.0",
    "wandb>=0.21.3",
]
