[project]
name = "chess-nnue"
version = "0.1.0"
description = "NNUE chess evaluation trained on grandmaster games"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chess>=1.11.2",
    "numpy>=2.2.6",
    "torch>=2.8.0",
    "wandb>=0.21.3",
    "tqdm>=4.64.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "cairosvg>=2.7.0",
    "pillow>=10.0.0",
    "pygame>=2.5.0",
    "pybind11>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
cpp = [
    "pybind11>=2.10.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
